@@ -3,6 +3,11 @@
 	* nsd/log.c: LogToTcl: short-circuit for Fatal severity
 	otherwise we may get stucked in the depths of the memalloc.
 
+	* nsd/tcljob.c: Fixed wrong access to queuePtr variable
+	in the worker thread (Bug introduced 2008-04-26). Made 
+	LookupQueue errors trigger Fatal exceptions when run 
+	from within the worker threads.
+
 2008-04-27  Zoran Vasiljevic <vasiljevic@users.sf.net>
 
 	* nsd/driver.c: back-off send/recv buffer change as it aparently
